== 2.2.0 ==

  * Fixed bug that caused exception when given a folder containing non-js files, even with the x commandline option set to "js". ( issue #193 )
  * Fixed typo in index template [patch submitted by olle]. ( issue #198 )
  * Modified @borrows tag experimentally to allow for missing "as ..." clause.
  * Added support for the -S option to document code following the Secure Modules pattern.
  
== 2.1.0 ==

  * Added support for the @event tag.
  * Fixed bug that prevented the : character from appearing in symbol names.
  * Fixed bug that prevented underscored symbols marked with @public being tagged as private. (issue #184 )
  * Fixed bug that randomly affected the @memberOf tag when the name of the symbol did not include the parent name.
  * Fixed bug that prevented templates that were not in the jsdoc-toolkit folder from being found. ( issue #176 )
  * Added ability to check for trailing slash on template path. ( issue #177 )
  * Modified classDesc so that it no longer is appended with the constructor desc.
  * Fixed call to plugin onDocCommentSrc.
  * Added missing support for inline doc comments for function return types. ( issue #189 )
  * Added command line option -q, --quiet.
  * Added command line option -E, --exclude. ( issue #143 )
  * Added 2 more hooks for plugins. ( issue #163 )
  * Added support for extending built-ins. ( issue #160 )
  * Added "compact" option to JSDOC.JsPlate.prototype.process. ( issue #159 )
  * @augments no longer documents static members as inherited. ( issue #138 )
  * @link to a class now goes to the page for that class, not the constructor. ( issue #178 )
  * Warnings of mismatched curly brace now include filename. ( issue #166 )
  * Fixed bug affecting template paths loaded via a configuration file when the trailing slash is missing. ( issue #191 )
  * Minor optimizations.

== 2.0.2 ==
