@@ -10,6 +10,8 @@ JSDOC.Symbol = function() {
 }
 
 JSDOC.Symbol.prototype.init = function() {
+	this._name = "";
+	this._params = [];
 	this.$args = [];
 	this.addOn = "";
 	this.alias = "";
@@ -20,24 +22,21 @@ JSDOC.Symbol.prototype.init = function() {
 	this.defaultValue = undefined;
 	this.deprecated = "";
 	this.desc = "";
-	this.fires = [];
 	this.example = [];
 	this.exceptions = [];
+	this.fires = [];
 	this.inherits = [];
 	this.inheritsFrom = [];
 	this.isa = "OBJECT";
-	this.isEvent = false;
 	this.isConstant = false;
+	this.isEvent = false;
 	this.isIgnored = false;
 	this.isInner = false;
-	this.isEvent = false;
 	this.isNamespace = false;
 	this.isPrivate = false;
 	this.isStatic = false;
 	this.memberOf = "";
 	this.methods = [];
-	this._name = "";
-	this._params = [];
 	this.properties = [];
 	this.requires = [];
 	this.returns = [];
